--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://tinyurl.com/yx5zvq2b">
     
-    <title>Document</title>
+    <title>Jansenflix</title>
     <script>
         function acesso (form){
 
